<resources>
    <string name="app_name">Target</string>

    <!--  General  -->
    <string name="tktpl" translatable="false">TKTPL</string>
    <string name="author_name">Wisnu Pramadhitya Ramadhan/1606918055</string>
    <string name="objective">Objective</string>
    <string name="under_development">Sorry the feature is under development. Please come later.</string>
    <string name="grant">Grant</string>

    <!--  Permission  -->
    <string name="perm_calendar_description">We need to access your calendar to integrate the objective to your schedule.</string>

    <!--  Notification  -->
    <string name="default_channel_name">Notification</string>
    <string name="default_channel_description">All notifications</string>
    <string name="notif_good_morning_content">Let\'s review your targets!</string>

    <!--  Add Objective Form  -->
    <string name="add_objective_rational_hint">Objective details &#8230;</string>

    <!--  Title  -->
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_learn_okr">Learn OKR</string>

    <!-- Appbar -->
    <string name="menu_description">Menu</string>
    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_learn_okr">Learn OKR</string>

    <!-- Preference Titles -->
    <string name="theme_header">Theme</string>
    <string name="general_header">General</string>
    <string name="about_header">About</string>

    <!-- Preference Keys -->
    <string name="good_morning" translatable="false">good_morning</string>
    <string name="backup" translatable="false">backup</string>
    <string name="auto_dark_mode" translatable="false">auto_dark_mode</string>
    <string name="theme_mode" translatable="false">theme_mode</string>
    <string name="active_user_id" translatable="false">active_user_id</string>
    <string name="active_project_id" translatable="false">active_project_id</string>
    <string name="first_run" translatable="false">first_run</string>

    <!-- General Preferences -->
    <string name="good_morning_title">Good morning</string>
    <string name="good_morning_summary">Remind you every 8 in the morning</string>
    <string name="backup_title">Backup</string>
    <string name="backup_summary">Backup your data in shareable file</string>

    <!-- Theme Preferences -->
    <string name="auto_dark_mode_title">Auto dark mode</string>
    <string name="auto_dark_mode_summary">Set to dark mode when battery saver is on. Only for the device before Android 10.</string>
    <string name="theme_mode_title">Theme</string>
    <string name="theme_value_dark" translatable="false">dark</string>
    <string name="theme_value_light" translatable="false">light</string>

    <!-- General Button Text -->
    <string name="btn_save">Save</string>
    <string name="btn_set_deadline">Set deadline</string>

    <!-- Recent Info -->
    <string name="recent_info_heading">Recent Info</string>
    <string name="add_objective_success">%d added</string>
    <string name="delete_objective_success">%d deleted</string>

</resources>
