<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/general_header">

        <SwitchPreferenceCompat
            app:key="@string/good_morning"
            app:title="@string/good_morning_title"
            app:summary="@string/good_morning_summary" />

        <Preference
            app:key="@string/backup"
            app:title="@string/backup_title"
            app:summary="@string/backup_summary"/>

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/theme_header">

        <SwitchPreferenceCompat
            app:key="@string/auto_dark_mode"
            app:title="@string/auto_dark_mode_title"
            app:summary="@string/auto_dark_mode_summary" />

        <ListPreference
            app:key="@string/theme_mode"
            app:defaultValue="light"
            app:entries="@array/theme_mode_entries"
            app:entryValues="@array/theme_mode_values"
            app:title="@string/theme_mode_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

</PreferenceScreen>
