<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/objectives_bottom_app_bar_search"
        android:icon="@drawable/ic_search_24dp"
        android:title="@string/action_search"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/objectives_bottom_app_bar_learn_okr"
        android:title="@string/action_learn_okr"
        app:showAsAction="never"/>

    <item
        android:id="@+id/objectives_bottom_app_bar_settings"
        android:title="@string/action_settings"
        app:showAsAction="never"/>

    <item
        android:id="@+id/objectives_bottom_app_bar_about"
        android:title="@string/action_about"
        app:showAsAction="never"/>
</menu>